Corrections to print format and documentation update

--- a/switzerland/translations/fr.csv
+++ b/switzerland/translations/fr.csv
@@ -7,6 +7,7 @@ Custom Print Format,CANCELLED,ANNULÉE
 Custom Print Format,Description,Désignation
 Custom Print Format,UoM,Unité
 Custom Print Format,Rate,Prix
+Custom Print Format,Qty,Qté
 Custom Print Format,Amount,Montants
 Custom Print Format,Sub-Total,Sous-Total
 Custom Print Format,Discount,Rabais
