Print format correction

--- a/switzerland/translations/fr.csv
+++ b/switzerland/translations/fr.csv
@@ -1,4 +1,4 @@
-Custom Print Format,Invoice Number :,Facture N°:
+Custom Print Format,Invoice N° :,Facture N°:
 Custom Print Format,From :,Du :
 Custom Print Format,Reference :,Référence :
 Custom Print Format,Concerns :,Concerne :
